// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks / Adjacent Post Links Poem Integration shall pass integration sanity test | next post only 1`] = `
"<div class=\\"adjacent-post-links-poem\\">
  <!---->
  <nuxtlink to=\\"/poezja-314/mock-post/\\" class=\\"adjacent-post-link-next adjacent-post-links-poem__next\\"><span class=\\"adjacent-post-link-next__title\\">Biznes</span> <span class=\\"adjacent-post-link-next__label\\">Następna</span></nuxtlink>
</div>"
`;

exports[`Blocks / Adjacent Post Links Poem Integration shall pass integration sanity test | prev / next post 1`] = `
"<div class=\\"adjacent-post-links-poem\\">
  <nuxtlink to=\\"/poezja-314/mock-post/\\" class=\\"adjacent-post-link-previous adjacent-post-links-poem__previous\\"><span class=\\"adjacent-post-link-previous__title\\">Biznes</span> <span class=\\"adjacent-post-link-previous__label\\">Poprzednia</span></nuxtlink>
  <nuxtlink to=\\"/poezja-314/mock-post/\\" class=\\"adjacent-post-link-next adjacent-post-links-poem__next\\"><span class=\\"adjacent-post-link-next__title\\">Biznes</span> <span class=\\"adjacent-post-link-next__label\\">Następna</span></nuxtlink>
</div>"
`;

exports[`Blocks / Adjacent Post Links Poem Integration shall pass integration sanity test | prev post only 1`] = `
"<div class=\\"adjacent-post-links-poem\\">
  <nuxtlink to=\\"/poezja-314/mock-post/\\" class=\\"adjacent-post-link-previous adjacent-post-links-poem__previous\\"><span class=\\"adjacent-post-link-previous__title\\">Biznes</span> <span class=\\"adjacent-post-link-previous__label\\">Poprzednia</span></nuxtlink>
  <!---->
</div>"
`;
